syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "card.proto";
import "api.proto";
import "google/protobuf/empty.proto";

option go_package = "MamangRust/paymentgatewaygrpc/internal/pb";

// request

message FindAllWithdrawRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3;
}

message FindByIdWithdrawRequest {
    int32 withdraw_id = 1;
}

// message FindByCardNumberRequest {
//     string card_number = 1;
// }

message CreateWithdrawRequest {
    string card_number = 1;
    int32 withdraw_amount = 2;
    google.protobuf.Timestamp withdraw_time = 3;
}

message UpdateWithdrawRequest {
    int32 withdraw_id = 1;
    string card_number = 2;
    int32 withdraw_amount = 3;
    google.protobuf.Timestamp withdraw_time = 4;
}

// response

message WithdrawResponse {
    int32 withdraw_id = 1;
    string card_number = 2;
    int32 withdraw_amount = 3;
    string withdraw_time = 4;
    string created_at = 5;
    string updated_at = 6;
}

message WithdrawResponseDeleteAt {
    int32 withdraw_id = 1;
    string card_number = 2;
    int32 withdraw_amount = 3;
    string withdraw_time = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

message ApiResponsesWithdraw {
    string status = 1;
    string message = 2;
    repeated WithdrawResponse data = 3;
}

message ApiResponseWithdraw{
    string status = 1;
    string message = 2;
    WithdrawResponse data = 3;
}

message ApiResponseWithdrawDelete {
    string status = 1;
    string message = 2;
}

message ApiResponseWithdrawAll {
    string status = 1;
    string message = 2;
}

message ApiResponsePaginationWithdraw {
    string status = 1;
    string message = 2;
    repeated WithdrawResponse data = 3;
    PaginationMeta pagination = 4;
}

message ApiResponsePaginationWithdrawDeleteAt {
    string status = 1;
    string message = 2;
    repeated WithdrawResponseDeleteAt data = 3;
    PaginationMeta pagination = 4;
}

service WithdrawService {
    rpc FindAllWithdraw (FindAllWithdrawRequest) returns (ApiResponsePaginationWithdraw);
    rpc FindByIdWithdraw (FindByIdWithdrawRequest) returns (ApiResponseWithdraw);
    rpc FindByCardNumber (pb.FindByCardNumberRequest) returns (ApiResponsesWithdraw);
    rpc FindByActive (FindAllWithdrawRequest) returns (ApiResponsePaginationWithdrawDeleteAt);
    rpc FindByTrashed (FindAllWithdrawRequest) returns (ApiResponsePaginationWithdrawDeleteAt);
    rpc CreateWithdraw (CreateWithdrawRequest) returns (ApiResponseWithdraw);
    rpc UpdateWithdraw (UpdateWithdrawRequest) returns (ApiResponseWithdraw);
    rpc TrashedWithdraw (FindByIdWithdrawRequest) returns (ApiResponseWithdraw);
    rpc RestoreWithdraw (FindByIdWithdrawRequest) returns (ApiResponseWithdraw);
    rpc DeleteWithdrawPermanent (FindByIdWithdrawRequest) returns (ApiResponseWithdrawDelete);

    rpc RestoreAllWithdraw(google.protobuf.Empty) returns (ApiResponseWithdrawAll){}
    rpc DeleteAllWithdrawPermanent(google.protobuf.Empty) returns (ApiResponseWithdrawAll){}
}
